fixed the layout issues

--- a/style.css
+++ b/style.css
@@ -265,7 +265,7 @@ html{
 .main-text{
     margin-top: .5rem;
     text-align: center;
-    font-size: 6rem;
+    font-size: 5.5rem;
     font-family: O-medium;
     font-weight: 400;
     line-height: 6.5rem;
@@ -530,7 +530,7 @@ html{
     text-align: center;
     font-family: O-medium;
     font-weight: 400;
-    font-size: 6rem;
+    font-size: 5.5rem;
     line-height: 7rem;
     background: linear-gradient(to right, black, black,rgb(114, 111, 111), rgb(159, 158, 158));
     background-clip: text;
